--- a/src/R/R101_CausalInference.Rmd
+++ b/src/R/R101_CausalInference.Rmd
@@ -48,97 +48,114 @@ ggsurvplot(
 
 ```{r}
 # create vector of all variable names
-allvar<-c("AGE_AT_DX_DATE1", "RILUZOLE_DUR","SEX", "RACE", "RILUZOLE_IND","BMI","MORT_1YR", "time")
+allvar<-c("AGE_AT_DX_DATE1", "RILUZOLE_DUR","SEX", "RACE","BMI","MORT_1YR")
 
 # create vector of categorical variable names
-catvar<-c("SEX", "RACE", "RILUZOLE_IND","MORT_1YR")
+catvar<-c("SEX", "RACE","MORT_1YR")
 
 # create a TableOne object
-tab<-CreateTableOne(vars=allvar,data=aset,factorVars = catvar)
+tab<-CreateTableOne(
+  data=aset,
+  vars=allvar,
+  factorVars = catvar,
+  strata="RILUZOLE_IND"
+)
 tab
-```
-
-```{r}
-allvar_excld_strata<-allvar[!allvar %in% c("RILUZOLE_IND","RILUZOLE_DUR")]
-catvar_excld_strata<-catvar[!catvar %in% c("RILUZOLE_IND","RILUZOLE_DUR")]
-tab2<-CreateTableOne(vars=allvar_excld_strata,data=aset,factorVars = catvar_excld_strata,strata="RILUZOLE_IND")
-tab2
 ```
 
 However, with only the demographic information, there doesn't seem to be any difference between the riluzole user group (`RILUZOLE_IND = 1`) and non-riluzole user group (`RILUZOLE_IND = 0`). We need to take a look at more baseline clinical and biological characteristics of these two comparison cohort to detect potential confounders. I have created a new dataset called "ALS_DX_BL" which contains all baseline comorbidities grouped as  clinical classification software (CCS) derived from patients' diagnosis history (all observations from CDM Diagnosis table). 
 
 ```{r}
 # need to load some additional data
-pacman::p_load(DBI,odbc)
-myconn <- DBI::dbConnect(drv = odbc::odbc(),
-                               dsn = "snowflake_db",
-                               uid = "XSM7F@UMSYSTEM.EDU", # need to modify to your own user id
-                               pwd = "")
+pacman::p_load(DBI,odbc,dbplyr)
+myconn <- DBI::dbConnect(
+  drv = odbc::odbc(),
+  dsn = "snowflake_deid",
+  uid = "XSM7F@UMSYSTEM.EDU", # need to modify to your own user id
+  pwd = ""
+)
 
-dat_add<-tbl(myconn,sql("select * from SHARED_DB.ALS.ALS_DX_BL where RN = 1")) %>% collect
-```
+add_cci<-tbl(myconn,sql("select * from SHARED_DB.ALS.ALS_BL_CCI")) %>% collect
+add_fs<-tbl(myconn,sql("select * from SHARED_DB.ALS.ALS_BL_FS")) %>% collect %>% 
+  mutate(RGS=trimws(RGS),SPEECH=trimws(SPEECH)) %>%
+  mutate(
+    LGS_WEAK = case_when(!LGS %in% c('Fair','Strong') ~ 1, TRUE ~ 0),
+    RGS_WEAK = case_when(!RGS %in% c('Fair','Strong') ~ 1, TRUE ~ 0),
+    SPEECH_ABN = case_when(!SPEECH %in% c('Normal') ~ 1, TRUE ~ 0),
+  )
 
-
-```{r}
-# set aside data dictionary for CCS categories
-ccs_dd<-dat_add %>% select(CCS,CCS_LABEL) %>% unique %>%
-  group_by(CCS) %>% summarise(CCS_LABEL = paste(CCS_LABEL,collapse = ";"), .groups = "drop")
-
-# create CCS indicators
-add_ccs<-dat_add %>%
-  select(PATID,CCS) %>% mutate(CCS=paste0("CCS_",CCS),ind=1) %>%
-  spread(CCS,ind,fill=0)
-```
-
-Adding the additional baseline co-morbidity information, we were able to observe some differential charactersitics between the comparison groups: 
-
-```{r}
 aset2<-aset %>%
-  left_join(add_ccs,by="PATID") %>%
-  mutate_at(vars(starts_with("CCS_")),
-            funs(ifelse(is.na(.), 0, .)))
-
-ccs_col<-colnames(aset2)[grepl("^CCS_",colnames(aset2))]
-allvar_excld_strata<-c(allvar_excld_strata,ccs_col)
-catvar_excld_strata<-c(catvar_excld_strata,ccs_col)
-
-tab3<-CreateTableOne(vars=allvar_excld_strata,data=aset2,factorVars = catvar_excld_strata,strata="RILUZOLE_IND")
-tab3
+  inner_join(add_cci,by="PATID") %>%
+  inner_join(add_fs,by="PATID")
 ```
 
-Using a threshold at p = 0.1, we observed that the following CCS codes (disease phenotype) had significantly different distribution between the exposed (riluzole user) and unexposed groups: 
-- CCS_101: Coronary atherosclerosis and other heart disease
-- CCS_163: Genitourinary symptoms and ill-defined conditions
-- CCS_211: Other connective tissue disease
-- CCS_252: Malaise and fatigue	
-- CCS_53: Disorders of lipid metabolism
-- CCS_95: Other nervous system disorders
+
+```{r}
+new_var<-c(colnames(add_cci),colnames(add_fs))
+new_var<-new_var[!new_var %in% c("PATID")]
+new_catvar<-new_var[!new_var %in% c("CCI_TOT")]
+
+# create vector of all variable names
+allvar2<-c(allvar,new_var)
+
+# create vector of categorical variable names
+catvar2<-c(catvar,new_catvar)
+
+# create a TableOne object
+tab2<-CreateTableOne(
+  data=aset2,
+  vars=allvar2,
+  factorVars = catvar2,
+  strata="RILUZOLE_IND"
+)
+tab2
+```
 
 
 # Covariate Adjustment
 
 ```{r}
-fit_cox<-coxph(Surv(time,status) ~ RILUZOLE_IND + AGE_AT_DX_DATE1 + CCS_101 + CCS_163 + CCS_211 + CCS_252 + CCS_53 + CCS_95,
-               data=aset2)
+fit_cox<-coxph(
+  Surv(time,status) ~ RILUZOLE_IND + SEX + AGE_AT_DX_DATE1 + BMI + CCI_TOT + RGS_WEAK  + SPEECH_ABN ,
+  data=aset2
+)
 summary(fit_cox)
 ```
+
 
 # Propensity Score Matching
 
 The "MatchIt" package provides convenient functions to perform propensity-score-based matching:   
 
 ```{r}
-mod_match<-matchit(RILUZOLE_IND ~ CCS_101 + CCS_163 + CCS_211 + CCS_252 + CCS_53 + CCS_95, data = aset2,
-                   method = "nearest", distance = "glm")
-love.plot(mod_match, thresholds = c(m = .1), var.order = "unadjusted")
+mod_match<-matchit(
+  RILUZOLE_IND ~ SEX + CCI_TOT + RGS_WEAK  + SPEECH_ABN, 
+  data = aset2,
+  method = "nearest", 
+  distance = "glm"
+)
+love.plot(
+  mod_match, 
+  thresholds = c(m = .2), 
+  var.order = "unadjusted"
+)
 ```
 
 Build coxph survival model based on the matched sample: 
 
 ```{r,fig.width=8}
 aset2_match <- match.data(mod_match)
-fit_cox2<-coxph(Surv(time,status) ~ RILUZOLE_IND + AGE_AT_DX_DATE1,
-                data=aset2_match)
+CreateTableOne(
+  data=aset2_match,
+  vars=allvar2,
+  factorVars = catvar2,
+  strata="RILUZOLE_IND"
+)
+
+fit_cox2<-coxph(
+  Surv(time,status) ~ RILUZOLE_IND + AGE_AT_DX_DATE1,
+  data=aset2_match
+)
 summary(fit_cox2)
 ```
 
@@ -147,10 +164,15 @@ summary(fit_cox2)
 The "WeightIt" package provides convenient function to calcualte propensity-score-based weights, which can be directly used as "weights" argument in widely used regression modeling packages, such as "glm", "coxph"
 
 ```{r}
-mod_weight<-weightit(RILUZOLE_IND ~ CCS_101 + CCS_163 + CCS_211 + CCS_252 + CCS_53 + CCS_95, data = aset2)
-
-fit_cox3<-coxph(Surv(time,status) ~ RILUZOLE_IND + AGE_AT_DX_DATE1,
-                data=aset2,weights = mod_weight$weights)
+mod_weight<-weightit(
+  RILUZOLE_IND ~ SEX + CCI_TOT + RGS_WEAK  + SPEECH_ABN, 
+  data = aset2
+)
+fit_cox3<-coxph(
+  Surv(time,status) ~ RILUZOLE_IND + AGE_AT_DX_DATE1,
+  data=aset2,
+  weights = mod_weight$weights
+)
 summary(fit_cox3)
 ```
 
